client/views/commentary/commentary.import.less
/* ... */
.edition-tab {
  display: inline-block;
  margin: 5px;
  box-shadow: none !important;
  border-radius: 2px;

  &.selected-edition-tab {
    background: @primary !important;
    margin: 3px;
    color: @light;
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2) !important;
    border-radius: 2px;

    button, div {
      background: @primary !important;

    }

    span {
      color: @light !important;

    }

    &:hover {
      background: @primary-dark-2 !important;
      button, div {
        background: @primary-dark-2 !important;

      }

    }

  }

  button {
    padding: 5px 10px;
    max-width: 200px;
    text-overflow: ellipsis;

    span {
      //font-family:@font-label;
      font-size: 12px !important;
    }

  }

}


.comment-fixed-title-wrap {
  position: relative;
  z-index: 1;
  background: rgba(255, 255, 255, 0.9);
  width: 100%;
  display: block;
  border-radius: 0px;
  opacity: 0;
  height: 0;
  overflow: hidden;

  .comment-fixed-title, .comment-fixed-lemma {
    display: inline-block;
    vertical-align: top;
  }
  .comment-fixed-title {
    padding: 13px 10px 10px 20px;
    font-size: 22px;
    margin: 9px 0;

  }
  .comment-fixed-lemma {
    font-size: 19px;
    padding-top: 19px;
    margin: 0;
    color: @secondary-text;

  }

  .comment-author-name {
    font-size: 15px;
    display: block;
    float: right;
    padding: 21px 20px 0px 20px;
    color: @secondary-text;

    &:hover {
      color: @primary;

    }

  }

}

.comment-author {

  margin: 12px 0 0;

  .comment-author-text {
    display: inline-block;
    vertical-align: top;
    padding: 4px 10px;

  }

  .comment-author-name {
    display: block;
		font-size:16px;

    &:hover {
      color: @primary;

    }

  }
  .comment-date {
    display: block;
    margin-top: 0px;
    font-size: 12px;
    color: @light-text;
    text-transform: uppercase;

  }

  .comment-author-image-wrap {
    display: inline-block;
    vertical-align: top;
    border-radius: 50px;
    width: 50px;
    height: 50px;
    overflow: hidden;
    border: 1px solid @divider-color;

    img {
      width: 100%;
    }
  }
}

.comment-keywords-container {
  width: 90%;
  margin: 0 auto;
}

.comment-keywords {
  margin: 15px 0 10px 0;
}

.comment-keyword {
  background: @primary;
  display: inline-block;
  vertical-align: top;
  margin: 0 10px 10px 0;
  border-radius: 0;
  cursor: pointer;
  min-height: 0;
  line-height: 1.3em;

  button {
    background-color: @primary !important;

  }

  span {
    color: @light !important;
    font-size: 12px !important;
    text-transform: uppercase;

  }

  &:hover, &:focus {
    color: @light;
    background: @primary-dark-2 !important;

  }

}

.comment-body {
  margin-top: 30px;
  padding: 0 5px;
  cursor: default;

  &:focus {
    outline: none;
    border: none;
  }

  p, li, span, a {
    font-family: @font-commentary;
    font-size: 18px;
    font-weight: 300;
    line-height: 1.76em;
    width: 100%;
    margin: 0;
    max-width: 1000px;
    padding: 15px 0;
    word-break: break-word;

  }

  ol, ul {
    list-style: disc;
    margin: 0px;
    padding: 5px 15px;
    li {
      margin: 0;
      padding: 2px 0;
      font-size: 16px;
    }
  }

  a {
    cursor: pointer;
    border-bottom: 2px solid @primary;
    box-shadow: none;
    font-weight: 300;
    color: rgba(0, 0, 0, 0.7);
    padding: 0;
    &:hover {
      border-bottom: 2px solid @light;
    }

  }
}

.comment-reference {
  padding-top: 30px;

  h4 {
    font-family: @font-label;
    font-size: 18px;
    text-transform: uppercase;
    margin: 5px 0;
    padding-right: 12px;
    color: @primary;
  }
  h4, p, a {
    display: inline-block;
    vertical-align: top;

  }
  p, a {
    font-weight: lighter;
    font-family: @font-body;
    font-size: 18px;

  }

  a {
    border-bottom: 2px solid @primary;
    box-shadow: none;
    &:hover {
      border-bottom: 2px solid @light;
    }
  }

  p {
    margin: 4px 7px;
    width: auto;
    padding: 0;
  }

}

.comment-persistent-identifier {
  position: absolute;
  width: 100%;
  text-align: right;
  bottom: 80px;
  right: 50px;

  a, span {
    display: inline-block;
  }

  a {
    font-size: 12px;
    background: #f6f6f6;
    border-radius: 2px;
    padding: 5px 15px;
    text-transform: uppercase;
    font-weight: bold;
    opacity: 0.7;

    &:hover {
      background: @md-primary;
      opacity: 1;
      span {
        color: @light;

      }
    }
  }
}

.comment-citation {
  position: absolute;
  bottom: 80px;
  right: 50px;

  div {
    box-shadow: none !important;
  }

  button {
    background-color: #f6f6f6 !important;
    opacity: 0.7;
		border-radius: 0px !important;

    span {
      font-size: 12px !important;
    }

		> div > div {
			border-radius: 0px !important;
		}

    &:hover {
      background-color: @md-primary !important;
      opacity: 1;

      span {
        color: @light !important;
      }
    }
  }
}

.comment-meta-section {
  margin: 20px auto 30px;
  width: 100%;

  h4 {
    font-family: @font-label;
    font-size: 26px;
  }

  .item-link {
    display: inline-block;
    border-bottom: 1px solid @primary;
    box-shadow: inset 0 -2px 0 @primary;
    font-size: 18px;
    margin-bottom: 5px;

    &:hover, &:focus {

      border-bottom: 1px solid @dark-brown;
      box-shadow: inset 0 -2px 0 @dark-brown;

    }

  }

  .item-info {
    display: block;
    color: rgba(0, 0, 0, 0.7);

  }

}

.comment-outer.discussion--width {
  .comment {
    width: 50%;
    margin-left: 0;
  }
  .discussion-wrap {
    width: 49%;
  }
  .continue-discussion {
    display: none;
  }
  .discussion-thread {
    display: block;
  }

}

.comment-outer.discussion--visible {
  .discussion-thread {
    opacity: 1;
  }

}

.profile-picture {
  width: 50px;
  height: 50px;
  overflow: hidden;
  border-radius: 50px;
  border: 1px solid @divider-color;

  img {
    width: 100%;

  }

}
/* ... */

